syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcClient";

package sniffer;

service StreamingDates {
    
  rpc GetStreamingData (stream streamingRequest) returns (streamingReply);
}

message streamingReply {  
      int32 index = 1;             
}

message streamingRequest {
     int32 source_port = 8080;
     int32 dest_port = 8081;
     string source_ip = 192;
     string dest_ip = 168;
     string source_mac = 1;
     string dest_mac = 2;     
     string proto = 3;
}